--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
+    "@babel/plugin-syntax-jsx": "^7.10.4",
     "@storybook/addon-backgrounds": "^5.3.19",
     "@storybook/addon-storysource": "^5.3.19",
     "@storybook/addon-viewport": "^5.3.19",
@@ -50,6 +51,7 @@
   },
   "dependencies": {
     "goober": "^1.8.0",
-    "preact": "^10.4.4"
+    "preact": "^10.4.4",
+    "unistore": "^3.5.2"
   }
 }
