--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --config webpack.prod.ts",
     "serve": "serve build",
     "storybook": "start-storybook -p 3333 -s public .env",
-    "build-storybook": "build-storybook -s public .env"
+    "build-storybook": "build-storybook -s public .env",
+    "stats": "webpack --json > stats.json"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
@@ -44,6 +45,7 @@
     "typescript": "^3.9.5",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0",
